--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,19 +1,22 @@
-body{
+body
+{
     color: #333;
-    text-align: left;
-    font-family: courier;
+    text-align: center;
+    font-family: "Arial";
     font-size: 16px;
-    margin: 0px;
-    padding: 0px;
+    margin: 0;
+    padding: 0;
 }
-#container{
+#container
+{
     width: 70%;
     padding: 1em;
     text-align: left;
-    border:  1px solid #DDD;
+    border: 1px solid #DDD;
     margin: 0 auto;
 }
 
-#container h1{
+#container h1
+{
     font-size: 20px;
 }
