--- a/css/estilos.css
+++ b/css/estilos.css
@@ -7,6 +7,19 @@ body
     margin: 0;
     padding: 0;
 }
+#cabecera{
+    background: #33A;
+    box-shadow: 0px 2px 20px 0px rgb(0,0, 0.25);
+    color: white;
+    margin: 0;
+    font-weight: bold;
+    padding: 0.5m;
+}
+#cabecera #tagline{
+    padding: 0 0 0 1e,;
+    font-weight: normal;
+    font-size: 0.8em;
+}
 #container
 {
     width: 70%;
@@ -19,4 +32,7 @@ body
 #container h1
 {
     font-size: 20px;
+}
+#post{
+    padding: 1em;
 }
